metadata/force-app/main/default/objects/CustomName_MVDIJ__c/CustomName_MVDIJ__c.object-meta.xml
<CustomObject>
    <description>Description_WBvNb</description>
    <label>CustomLabel_ZQShw</label>
    <nameField>
        <label>CustomLabel_ZQShw</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ZQShws</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>