metadata/force-app/main/default/objects/CustomName_MVDIJ__c/fields/CustomField_qrbqF__c.field-meta.xml
<CustomField>
    <fullName>CustomField_qrbqF__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmtkmX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>