metadata/force-app/main/default/objects/CustomName_MVDIJ__c/fields/CustomField_SdPOg__c.field-meta.xml
<CustomField>
    <fullName>CustomField_SdPOg__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldPlQnJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>